chore: 完成多批次功能修复与优化
涵盖以下改进：
1. 后端配置与代码优化
   - 增加文件上传大小限制配置
   - 修复JWT过滤器移除查询参数token获取逻辑
   - 优化向量查询日志打印，添加异常栈
   - 修复SemanticCacheRepository向量类型转换
   - 重构DocumentAdapter依赖注入，修复DocumentExtractor组件化
   - 修复PDF提取流式读取逻辑，避免大文件OOM
   - 优化扫描任务并发控制，添加信号量限制线程数
   - 修复ScanScopeResolver扫描类型解析逻辑
   - 新增VectorUtils向量工具类
   - 新增批量插入BaseMapper方法
   - 修复NotificationController请求方法从GET改为PUT
   - 修复单元测试用例，补充断言与依赖注入

2. 前端功能修复与体验优化
   - 修复Vitest环境变量配置，使用import.meta.env替代process.env
   - 所有API路径添加encodeURIComponent处理参数
   - 新增DOMPurify依赖，修复多处XSS风险，对Markdown渲染内容进行净化
   - 新增VueUse防抖函数，优化代码搜索性能
   - 重构多处异步请求，添加try-catch捕获异常并展示错误提示
   - 修复下载工具类，添加Bearer Token认证头，适配当前认证体系
   - 修复通知SSE请求逻辑，移除URL传token，使用请求头携带认证
   - 修复上传组件认证逻辑，添加401状态码处理，自动登出过期会话
   - 重构多处Pinia store，添加异常捕获与错误提示
   - 修复API请求参数传递格式，修正vectorApi语义搜索参数
   - 移除冗余代码，修复多处语法错误与多余闭合括号
   - 新增单元测试用例，覆盖通知中心、文档列表等组件

3. 依赖更新
   - 添加dompurify及类型定义依赖